--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
       <div class="div2">
         <div id="categorie" class="rectgris">
             <button type="button" id="ResetView" class="buttonReset"> Repositioner la map 🔄</button>
+            <h1>Catégorie :</h1>
             <div id="categorie_toggle">
-
+                <button id="Forgeron" onclick="toggleMarker(this)" >Forgeron</button>
+                <button id="Alchimiste" onclick="toggleMarker(this)">Alchimiste</button>
+                <button id="Quete" onclick="toggleMarker(this)">Quete</button>
+                <button id="Secret" onclick="toggleMarker(this)">Secret</button>
+                <button id="Mob" onclick="toggleMarker(this)">Mob</button>
+                <button id="Lieu" onclick="toggleMarker(this)">Lieu</button>
+                <button id="Marchand" onclick="toggleMarker(this)">Marchand</button>
             </div>
         </div>
       </div>
