--- a/index.html
+++ b/index.html
@@ -10,31 +10,30 @@
 <body>
     <div class="parent">
       <div class="div1">
-        <div class="div1">
           <img src="logoguildepetit.png" #style="width:100%; height:auto;"> 
-        </div>
-        <div class="div1">
-           <img src="logodiscord.png" #style="width:100%; height:auto;">
-        </div>
+          <a href="https://discord.gg/vtsze9Regu " target="_blank"><img src="logodiscord.png" #style="width:100%; height:auto;"></a>
+          <img src="logoguildepetit.png" #style="width:100%; height:auto;"> 
       </div>
       <div class="div2">
         <div id="categorie" class="rectgris">
             <button type="button" id="ResetView" class="buttonReset"> Repositioner la map 🔄</button>
             <h1>Catégorie :</h1>
             <div id="categorie_toggle">
-                <button id="Forgeron" onclick="toggleMarker(this)" >Forgeron</button>
-                <button id="Alchimiste" onclick="toggleMarker(this)">Alchimiste</button>
-                <button id="Quete" onclick="toggleMarker(this)">Quete</button>
-                <button id="Secret" onclick="toggleMarker(this)">Secret</button>
-                <button id="Mob" onclick="toggleMarker(this)">Mob</button>
-                <button id="Lieu" onclick="toggleMarker(this)">Lieu</button>
-                <button id="Marchand" onclick="toggleMarker(this)">Marchand</button>
+                <button id="Forgeron" onclick="toggleMarker(this)" class="btn-categorie">Forgeron</button>
+                <button id="Alchimiste" onclick="toggleMarker(this)" class="btn-categorie">Alchimiste</button>
+                <button id="Quete" onclick="toggleMarker(this)" class="btn-categorie">Quete</button>
+                <button id="Secret" onclick="toggleMarker(this)" class="btn-categorie">Secret</button>
+                <button id="Mob" onclick="toggleMarker(this)" class="btn-categorie">Mob</button>
+                <button id="Lieu" onclick="toggleMarker(this)" class="btn-categorie">Lieu</button>
+                <button id="Marchand" onclick="toggleMarker(this)" class="btn-categorie">Marchand</button>
+                <button id="Donjon" onclick="toggleMarker(this)" class="btn-categorie">Donjon</button>
+                <button id="Boss" onclick="toggleMarker(this)" class="btn-categorie">Boss</button>
+                <button id="Ressources" onclick="toggleMarker(this)" class="btn-categorie">Ressources</button>
             </div>
         </div>
       </div>
       <div class="div3">
-        <div id="info" class="rectgris">
-        </div>
+        <div id="info" class="rectgris"></div>
       </div>
       <div class="div4">
           <div id="carte"></div>
