--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="div3">
         <p class="nomguilde">Aurarius</p>
-        <img src="/logoguildepetit.png" id="logoguilde">
+        <img src="logoguildepetit.png" id="logoguilde">
         <p class="nomguilde">Draconis</p>
     </div>
     <div class="div4" id="palier"></div>
