--- a/Paliers/Palier1/Labyrinthe/index.html
+++ b/Paliers/Palier1/Labyrinthe/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="parent">
       <div class="div1">
-          <img src="/logoguildepetit.png" #style="width:100%; height:auto;"> 
-          <a href="https://discord.gg/vtsze9Regu " target="_blank"><img src="/logodiscord.png" #style="width:100%; height:auto;"></a>
-          <img src="/logoguildepetit.png" #style="width:100%; height:auto;"> 
+          <img src="/SAOMAP/logoguildepetit.png" #style="width:100%; height:auto;"> 
+          <a href="https://discord.gg/vtsze9Regu " target="_blank"><img src="/SAOMAP/logodiscord.png" #style="width:100%; height:auto;"></a>
+          <img src="/SAOMAP/logoguildepetit.png" #style="width:100%; height:auto;"> 
       </div>
       <div class="div2">
         <div id="categorie" class="rectgris">
