--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="parent1" style="display:block">
         <div class="nom">
-            <img id="logo" src="logo.png" >
+            <img id="logo" src="/SAOMAP/logo.png" >
         </div>
         <div class="linkStart" >
             <!-- <button class="wave" id="waveText" onclick="afficherPagePalier()"> Link Start </button> -->
@@ -26,7 +26,7 @@
     </div>
     <div class="div3">
         <p class="nomguilde">Aurarius</p>
-        <img src="logoguildepetit.png" id="logoguilde">
+        <img src="/SAOMAP/logoguildepetit.png" id="logoguilde">
         <p class="nomguilde">Draconis</p>
     </div>
     <div class="div4" id="palier"></div>
