--- a/Paliers/Palier1/World/index.html
+++ b/Paliers/Palier1/World/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="/SAOMAP/image/logoguildetransparent.png">
+    <title>Aurarius Draconis</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -16,7 +17,7 @@
       </div>
       <div class="div2">
         <div id="categorie" class="rectgris">
-            <button type="button" id="ResetView" class="buttonReset"> Repositioner la map 🔄</button>
+            <button type="button" id="ResetView" class="buttonReset"> Repositioner la carte 🔄</button>
             <h1>Catégorie :</h1>
             <div id="categorie_toggle">
                 <button id="Forgeron" onclick="toggleLayerMarker(this)" class="btn-categorie">Forgeron</button>
