--- a/Paliers/Palier1/index.html
+++ b/Paliers/Palier1/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <link rel="icon" type="image/png" href="/SAOMAP/image/logoguildetransparent.png">
+    <title>Aurarius Draconis</title>
 </head>
 <body>
     <div id="parent">
