--- a/Paliers/Palier1/World/index.html
+++ b/Paliers/Palier1/World/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="parent">
       <div class="div1">
-          <img src="/SAOMAP/image/logoguildepetit.png" #style="width:100%; height:auto;"> 
+          <!-- <img src="/SAOMAP/image/logoguildepetit.png" #style="width:100%; height:auto;"> 
           <a href="https://discord.gg/vtsze9Regu " target="_blank"><img src="/SAOMAP/image/logodiscord.png" #style="width:100%; height:auto;"></a>
-          <img src="/SAOMAP/image/logoguildepetit.png" #style="width:100%; height:auto;"> 
+          <img src="/SAOMAP/image/logoguildepetit.png" #style="width:100%; height:auto;">  -->
       </div>
       <div class="div2">
         <div id="categorie" class="rectgris">
