--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Aurarius Draconis</title>
 </head>
 <body>
-    <div id="parent1" style="display:none">
+    <div id="parent1" style="display:block">
         <div class="nom">
             <img id="logo" src="/SAOMAP/image/logo.png" >
         </div>
@@ -20,7 +20,7 @@
     <!-- <div id="parent2" style="display:block">
         
     </div> -->
-    <div class="parent2" id='parent2' style="display:grid">
+    <div class="parent2" id='parent2' style="display:none">
     <div class="div1"></div>
     <div class="div2">
         <p id="titleCP">Choisir votre palier : </p>
